Fixed text alignment in blog and skills

--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -68,7 +68,6 @@
   padding: 25px 0 21px;
   text-align: center;
   height: 30%;
-  display: flex;
 }
 
 
